--- a/petnet_pro/userprofile/templates/userprofile/vendor_detail.html
+++ b/petnet_pro/userprofile/templates/userprofile/vendor_detail.html
@@ -9,7 +9,7 @@
     {% firstof user.get_full_name user.username%}
 </h1>
 
-{% for product in user.products.all %}
+{% for product in products %}
     <div class="product w-1/3 p-2">
       <div class="p-4 bg-gray-100">
         <a href="{% url 'product_detail' product.category.slug product.slug %}">
