--- a/petnet_pro/core/templates/core/base.html
+++ b/petnet_pro/core/templates/core/base.html
@@ -9,42 +9,59 @@
 </head>
 <body>
     <!-- Navigation Bar in My store
-    mx-auto -margins auto
+    mx-auto - margins auto
     py-4 -- padding 4 from up down
-    px-6 ---pading 6 left--right
+    px-6 -- pading 6 left--right
     text-2xl -- text size
     flex - for flex box
     items-center -- put items in the center of flex-box and navbar
     justify-between - make a distance between elements
 
     -->
-    <nav class="max-w-4xl mx-auto py-5 px-6 flex items-center justify-between bg-blue-300">
-        <div class="logo">
-            <a href="/" class="text-2xl text-white">
+    <nav class="max-w-4xl mx-auto py-5 px-7 flex items-center justify-between bg-blue-300">
+        <div class="flex items-center logo">
+            <a href="/" class="text-3xl text-white">
                 MyStore
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-9">
+                    <path d="M5.223 2.25c-.497 0-.974.198-1.325.55l-1.3 1.298A3.75 3.75 0 0 0 7.5 9.75c.627.47 1.406.75 2.25.75.844 0 1.624-.28 2.25-.75.626.47 1.406.75 2.25.75.844 0 1.623-.28 2.25-.75a3.75 3.75 0 0 0 4.902-5.652l-1.3-1.299a1.875 1.875 0 0 0-1.325-.549H5.223Z" />
+                    <path fill-rule="evenodd" d="M3 20.25v-8.755c1.42.674 3.08.673 4.5 0A5.234 5.234 0 0 0 9.75 12c.804 0 1.568-.182 2.25-.506a5.234 5.234 0 0 0 2.25.506c.804 0 1.567-.182 2.25-.506 1.42.674 3.08.675 4.5.001v8.755h.75a.75.75 0 0 1 0 1.5H2.25a.75.75 0 0 1 0-1.5H3Zm3-6a.75.75 0 0 1 .75-.75h3a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1-.75-.75v-3Zm8.25-.75a.75.75 0 0 0-.75.75v5.25c0 .414.336.75.75.75h3a.75.75 0 0 0 .75-.75v-5.25a.75.75 0 0 0-.75-.75h-3Z" clip-rule="evenodd" />
+                  </svg>
+                  
             </a>
         </div>
 
         <!-- Simple search -->
         <div class="search">
-            <form method="get" action="/search/">
-                <input type="search" name="query" placeholder="Search...">
-                <button>Search</button>
+            <form method="get" action="/search/" class="border-3 border-blue-300 flex items-center space-x-3">
+                <input type="search" name="query" placeholder="Search..." class="p-3 border-2 border-blue-700 rounded-xl">
+                <button>
+                    <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-9 text-white">
+                        <path d="M8.25 10.875a2.625 2.625 0 1 1 5.25 0 2.625 2.625 0 0 1-5.25 0Z" />
+                        <path fill-rule="evenodd" d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm-1.125 4.5a4.125 4.125 0 1 0 2.338 7.524l2.007 2.006a.75.75 0 1 0 1.06-1.06l-2.006-2.007a4.125 4.125 0 0 0-3.399-6.463Z" clip-rule="evenodd" />
+                      </svg>
+                      
+                </button>
             </form>
         </div>
 
         <!-- Create links for Menu or About, Myaccount and Vendors -->
         <div class="menu flex-x-5 justify-between ">
             {% menu %}
+            <!-- Conditions -->
             {% if request.user.is_authenticated %}
-            <a href="{%url 'myaccount' %}" class="text-white">
+            
+                <a href="{%url 'myaccount' %}" class="m-2 bg-blue-600 py-2 px-4 text-white rounded-xl hover:bg-blue-800">
                 
-            MyAccount
-            </a>
+                    MyAccount 
+                </a>
+           
+            
             <!-- for users vendors link -->
-            <a href="{% url 'my_store' %}" class="text-white">
-                User
+            <a href="{% url 'my_store' %}" class="bg-blue-600 py-2 px-4 text-white rounded-xl hover:bg-blue-800">
+                    User
             </a>
+            
+            
             {% endif %}
             
         </div>
