--- a/petnet_pro/store/templates/store/category_detail.html
+++ b/petnet_pro/store/templates/store/category_detail.html
@@ -7,26 +7,34 @@
 {%block content%}
 Hello
 <h1 class="text-2xl">{{category.title}}</h1>
+{% include 'store/partials/products.html' %}
+
+
+{%endblock%}
+
+
+<!-- 
+
 {% for product in products %}
     <div class="product w-1/3 p-2">
       <div class="p-4 bg-gray-100">
         <a href="{% url 'product_detail' product.category.slug product.slug %}">
-            {%if product.image%}
+            {% if product.image %}
             <div class="image">
               <img src="{{product.image.url}}" alt="{{product.title}}">
             </div>
-            {% endif%}
+            {% endif %}
             <h2 class="text-xl">
           
-          {{product.title}}
+          {{ product.title }}
         </h2>
         <p class="text-sm text-gray-600">${{product.get_display_price}}</p>
       </a>
       </div>
 
-      <!--closing div below  -->
+      
     </div>
     
-  {% endfor %}
+    {% endfor %}
 
-{%endblock%}
+ -->
