--- a/petnet_pro/store/templates/store/product_detail.html
+++ b/petnet_pro/store/templates/store/product_detail.html
@@ -6,11 +6,11 @@ Prod_datails
 
 {%block content%}
 Hello
-{%if product.image%}
+{% if product.image %}
         <div class="image">
           <img src="{{product.image.url}}" alt="{{product.title}}">
         </div>
-        {% endif%}
+{% endif%}
 <h1 class="text-2xl">{{product.title}}</h1>
 <p class="text-xs text-gray-500">
     ${{product.get_display_price}}
@@ -19,7 +19,10 @@ Hello
       {% firstof product.user.get_full_name product.user.username %}
     </a>
 </p>
-{%if product.description %}
+{% if product.description %}
 <p class="mt-4">{{product.description}}</p>
-{%endif%}
-{%endblock%}
+{% endif %}
+
+<a href="{% url 'add_to_cart' product.id %}" class="inline-block px-8 py-4 bg-blue-500 text-white"> Add To Cart</a>
+
+{% endblock %}
