--- a/petnet_pro/userprofile/templates/userprofile/my_store.html
+++ b/petnet_pro/userprofile/templates/userprofile/my_store.html
@@ -9,16 +9,25 @@ User
 <h1 class="text-2xl">
 User
 </h1>
-<a href="#" class="mt-6 inline-block py-4 px-8 bg-blue-500 text-white">Add product</a>
+<!-- for messages that show changes in states or adding products -->
+{% if messages %}
+  {% for message in messages%}
+  <div class="mt-4 px-8 py-4 bg-blue-200 text-blue-800">
+    {{message}}
+  </div>
+  {%endfor %}
+{% endif %}
+<a href="{% url 'add_product'%}" class="mt-6 inline-block py-4 px-8 bg-blue-500 text-white">Add product</a>
 
 <h2 class="mt-6 text-xl">My Products</h2>
-{%if request.user.products.all %}
+
+{% if products %}
 <div class="flex flex-wrap">
 
-    {% for product in request.user.products.all %}
+    {% for product in products %}
       <div class="product w-1/3 p-2">
         <div class="p-4 bg-gray-100">
-          <a href="{% url 'product_detail' product.category.slug product.slug %}">
+          <a href="{% url 'edit_product' product.id %}">
           {%if product.image%}
           <div class="image">
             <img src="{{product.image.url}}" alt="{{product.title}}">
@@ -29,6 +38,8 @@ User
             {{product.title}}
           </h2>
           <p class="text-sm text-gray-600">${{product.get_display_price}}</p>
+          <hr class = "my-3">
+          <p><strong>Status: {{product.get_status_display}}</strong></p>
         </a>
         </div>
   
