--- a/petnet_pro/userprofile/templates/userprofile/my_store.html
+++ b/petnet_pro/userprofile/templates/userprofile/my_store.html
@@ -1,12 +1,16 @@
 {% extends 'core/base.html' %}
 <!--  -->
-{%block title%} User {%endblock%}
+{%block title%} MyOrders {%endblock%}
 
 <!--  -->
 {% block content %}
-<h1 class="text-2xl">User</h1>
+<h1 class="text-2xl">
+  {% firstof product.user.get_full_name product.user.username %}
+</h1>
 <!-- for messages that show changes in states or adding products -->
-{% if messages %} {% for message in messages%}
+{% if messages %}
+<!--  -->
+{% for message in messages%}
 <div class="mt-4 px-8 py-4 bg-blue-200 text-blue-800">{{message}}</div>
 {%endfor %}
 <!--  -->
