--- a/petnet_pro/core/templates/core/menu.html
+++ b/petnet_pro/core/templates/core/menu.html
@@ -1,6 +1,31 @@
 {% for category in categories %}
-    <a href="{%url 'category_detail' category.slug %}" class="p-2 text-white hover:bg-blue-500 rounded-xl">{{category.title}}</a>
+<!--  -->
+<a
+  href="{%url 'category_detail' category.slug %}"
+  class="p-2 text-white hover:bg-blue-500 rounded-xl"
+  >{{category.title}}</a
+>
 {%endfor%}
 <a href="{% url 'about' %}" class="p-2 text-white hover:bg-blue-500 rounded-xl">
-    About
+  About
 </a>
+<!--  -->
+<!-- <a
+  href="{% url 'signup' %}"
+  class="p-2 text-white hover:bg-blue-500 rounded-xl"
+>
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    fill="none"
+    viewBox="0 0 24 24"
+    stroke-width="1.5"
+    stroke="currentColor"
+    class="w-6 h-6"
+  >
+    <path
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"
+    />
+  </svg>
+</a> -->
