--- a/petnet_pro/store/templates/store/partials/products.html
+++ b/petnet_pro/store/templates/store/partials/products.html
@@ -1,24 +1,24 @@
 <div class="flex flex-wrap">
-
-    {% for product in products %}
-      <div class="product w-1/3 p-2">
-        <div class="p-4 bg-gray-100">
-          <a href="{% url 'product_detail' product.category.slug product.slug %}">
-          <!-- {%if product.image%} -->
-          <div class="image">
-            <img src="{{product.get_thumbnail }}" alt="{{product.title}}">
-          </div>
-          <!-- {% endif%} -->
-            <h2 class="text-xl">
-  
-            {{product.title}}
-          </h2>
-          <p class="text-sm text-gray-600">${{product.get_display_price}}</p>
-        </a>
+  {% for product in products %}
+  <div class="product w-1/3 p-1">
+    <div class="p-4 bg-gray-100 rounded-xl">
+      <a href="{% url 'product_detail' product.category.slug product.slug %}">
+        <!-- {%if product.get_thumbnail%} -->
+        <div class="image">
+          <img
+            class="mx-auto"
+            src="{{product.get_thumbnail }}"
+            alt="{{product.title}}"
+          />
         </div>
-  
-        <!--closing div below  -->
-      </div>
-      
-    {% endfor %}
+        <!-- {% endif%} -->
+        <h2 class="mt-2 text-xl">{{product.title}}</h2>
+        <p class="text-sm text-gray-600">${{product.get_display_price}}</p>
+      </a>
     </div>
+
+    <!--closing div below  -->
+  </div>
+
+  {% endfor %}
+</div>
