--- a/petnet_pro/userprofile/templates/userprofile/login.html
+++ b/petnet_pro/userprofile/templates/userprofile/login.html
@@ -1,18 +1,15 @@
 {% extends 'core/base.html' %}
+<!--  -->
+{%block title%} Login {%endblock%}
+<!--  -->
 
-{%block title%}
-Login
-{%endblock%}
+{% block content %}
+<h1 class="text-2xl">Login</h1>
 
-{% block content  %}
-<h1 class="text-2xl">
-   Login
-</h1>
-
-<form method = "post" action=".">
-    {% csrf_token %}
-
-    {{ form.as_p }}
-    <button class="py-4 px-4 bg-teal-600 text-white">LogIn</button>
+<form method="post" action=".">
+  {% csrf_token %}
+  <!--  -->
+  {{ form.as_p }}
+  <button class="py-4 px-4 bg-teal-600 text-white">LogIn</button>
 </form>
-{% endblock  %}
+{% endblock %}
