--- a/petnet_pro/userprofile/templates/userprofile/myaccount.html
+++ b/petnet_pro/userprofile/templates/userprofile/myaccount.html
@@ -1,15 +1,24 @@
 {% extends 'core/base.html' %}
+<!--  -->
+{%block title%} myAccount {%endblock%}
+<!--  -->
+{% block content %}
+<h1 class="mb-2 text-2xl">Myaccount Page</h1>
 
-{%block title%}
-myAccount
-
-{%endblock%}
-
-{% block content  %}
-<h1 class="text-2xl">
-   Myaccount Page
-</h1>
-
-<a href="{% url 'logout' %}" class="mt-6 inline-block py-4 px-8 bg-red-400 text-white">LogOut</a>
+<!-- list all items (products) -->
+{% include './user_detail.html' %}
+<!--  -->
+<!--  -->
+<!--  -->
+<form action="{% url 'logout' %}" method="post">
+  {% csrf_token %}
+  <button
+    type="submit"
+    class="mt-6 inline-block py-4 px-8 bg-red-400 text-white"
+  >
+    Logout
+  </button>
+</form>
+<!-- <a href="{% url 'logout' %}">LogOut</a> -->
 <!-- {% firstof user.get_full_name user.username%} -->
 {% endblock %}
